[tool.poetry]
name = "llm-env"
version = "0.0.1"
description = "this env is for making AI app for guide LLM"
authors = ["Insan Ramadhan, modified by Yohanes Kurniawan Hertanto"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "open"
url = "https://pypi.org/simple"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "*"
langchain-community = "*"
langchain-ollama = "*"
langchain-core = "^0.3"
langchain-openai = "*"
langchain-text-splitters = "*"
langgraph = "*"
langsmith = "*"
lazy-object-proxy = "1.10.0"
libcst = "1.0.1"
llama-index = "*"
llama-index-agent-openai = "*"
llama-index-cli = "*"
llama-index-core = "*"
llama-index-embeddings-openai = "*"
llama-index-indices-managed-llama-cloud = "*"
llama-index-legacy = "*"
llama-index-llms-openai = "*"
llama-index-multi-modal-llms-openai = "*"
llama-index-program-openai = "*"
llama-index-question-gen-openai = "*"
llama-index-readers-file = "*"
llama-index-readers-llama-parse = "*"
llama-parse = "*"
llamaindex-py-client = "*"
openai = "*"
openapi-core = "*"
streamlit = "*"
matplotlib = "*"
ragas = "*"
openpyxl = "*"
llama-toolchain = "^0.0.17"
setuptools = "^75.1.0"
ollama = "^0.3.3"
jupyter = "^1.1.1"
chainlit = "^1.2.0"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.4"
bs4 = "^0.0.2"
chromadb = "^0.5.11"
lotus-ai = "^0.1.4"
uv = "^0.4.22"
websockets = "^13.1"
soundfile = "^0.12.1"
pyaudio = "^0.2.14"
langfuse = "^2.52.1"
llama-index-vector-stores-chroma = "^0.2.1"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-llms-langchain = "^0.4.2"
llama-index-embeddings-langchain = "^0.2.1"
pyowm = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
